[gd_scene load_steps=8 format=3 uid="uid://chmldvapi2mug"]

[ext_resource type="Script" path="res://block.gd" id="1_dg7dk"]
[ext_resource type="Texture2D" uid="uid://dct2t24i1xpxw" path="res://sprites/sprite_blue_block.png" id="2_oe8mj"]
[ext_resource type="Texture2D" uid="uid://dvvtnt0i3bw6f" path="res://sprites/sprite_green_block.png" id="3_57tk3"]
[ext_resource type="Texture2D" uid="uid://ds7idr73yt0v3" path="res://sprites/sprite_red_block.png" id="3_dxas7"]
[ext_resource type="Texture2D" uid="uid://d3muegs1jjymg" path="res://sprites/sprite_yellow_block.png" id="5_ermyr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_biajv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_oe8mj")
}],
"loop": true,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_57tk3")
}],
"loop": true,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dxas7")
}],
"loop": true,
"name": &"red",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ermyr")
}],
"loop": true,
"name": &"yellow",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5hqxi"]
size = Vector2(126, 127)

[node name="block" type="CharacterBody2D"]
visibility_layer = 2
safe_margin = 0.09
script = ExtResource("1_dg7dk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.99, 0.99)
sprite_frames = SubResource("SpriteFrames_biajv")
animation = &"green"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5hqxi")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
target_position = Vector2(135, 2.08165e-12)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-135, 2.08165e-12)

[node name="RayCastTop" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, -100)

[node name="RayCastBottom" type="RayCast2D" parent="."]
target_position = Vector2(2.08165e-12, 100)
